# o-complex

./: README.md  pyproject.toml
settings/: Dockerfile  README.md  READMY.md  docker-compose.yml  pyproject.toml  readmy.md
settings/services/: user.py  weather.py
settings/settings/: settings.py  urls.py
settings/user/: admin.py  forms.py  models.py  urls.py  views.py
settings/user/migrations/: 0001_initial.py  0002_alter_customuser_email.py
settings/user/templates/registration/: login.html  register.html
settings/user/templates/user/: base.html  index.html
settings/weather/: models.py  urls.py  views.py
settings/weather/migrations/: 0001_initial.py  0002_alter_searchhistory_unique_together.py
settings/weather/templates/weather/: autocomplete.html  history.html  last_viewed_city.html  report.html  search.html
